--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "fs-app-template",
+  "name": "tic-tac-toe",
   "version": "2.0.0",
   "description": "Some boilerplate code to get you started - get shakin'!",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development",
-    "seed": "node script/seed.js",
     "start": "node server",
     "start:dev": "npm run build:dev & npm run start-server",
     "start:dev:logger": "LOGGING=true npm run start:dev",
@@ -20,15 +19,10 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
-    "history": "^4.9.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1",
-    "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "history": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -45,14 +39,8 @@
     "nodemon": "^1.19.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-test-renderer": "^16.4.2",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
     "supertest": "^4.0.2",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
